more changes to the shift bug

--- a/Main-Projects/ToDoApp/style.css
+++ b/Main-Projects/ToDoApp/style.css
@@ -645,6 +645,7 @@ ul:hover::-webkit-scrollbar-thumb {
 
   .app {
     width: 100%;
+    height: 100dvh;
     box-shadow: 0 0 0 0;
     border: none;
     padding: 0;
